# Python-Useful-Scripts

./: README.md
Tests/Mailserver/DNS/: README.md  pyproject.toml  test_dns.py
Tests/Mailserver/DNS/dkim/: selectors.lst
